CNCF/Istio/Circuit Breaking/istio-guide-DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpbin
spec:
  host: httpbin
  trafficPolicy:                    # 트래픽 정책 정의
    connectionPool:                 # 연결 풀 정책 정의
      tcp:                          # TCP 연결에 대한 설정
        maxConnections: 1           # 최대 연결 수
      http:                         # HTTP 연결에 대한 설정
        http1MaxPendingRequests: 1  # 처리되지 않은 최대 요청 수
        maxRequestsPerConnection: 1 # 연결 당 최대 요청 수
    outlierDetection:               # 이상 감지
      consecutive5xxErrors: 1       # 연속적인 5xx 에러 감지 횟수
      interval: 1s                  # 이상 감지 주기
      baseEjectionTime: 3m          # 이상이 감지된 인스턴스 제외 시간
